fix scrolling when modals are open on iOS

--- a/src/styles/globals/global.scss
+++ b/src/styles/globals/global.scss
@@ -18,6 +18,7 @@ body {
 
   &.modal-open {
     overflow: hidden;
+    position: relative;
   }
 }
 
